--- a/driver/docker-compose.yml.tmpl
+++ b/driver/docker-compose.yml.tmpl
@@ -29,6 +29,7 @@ replica:
         DEFAULT_DISK: {{.WriteIOPS}}
     {{end -}}
     labels:
+        io.rancher.container.system: Longhorn
         io.rancher.sidekicks: replica-api, sync-agent{{if .ReplicaBaseImage}}, replica-binary{{end}}
         io.rancher.container.hostname_override: container_name
         io.rancher.scheduler.affinity:container_label_ne: io.rancher.stack_service.name=$${stack_name}/$${service_name}
@@ -66,6 +67,7 @@ replica-binary:
     volumes:
     - /cmd
     labels:
+        io.rancher.container.system: Longhorn
         io.rancher.container.start_once: true
         {{- if (and (ne .SizeGB "0") (ne .SizeGB "")) }}
         io.rancher.resource.disksize.{{.Name}}: {{.SizeGB}}
@@ -94,6 +96,8 @@ sync-agent:
     - sync-agent
     - --listen
     - 0.0.0.0:9504
+    labels:
+        io.rancher.container.system: Longhorn
 
 replica-api:
     image: $IMAGE
@@ -109,6 +113,8 @@ replica-api:
     command:
     - longhorn-agent
     - --replica
+    labels:
+        io.rancher.container.system: Longhorn
 
 controller:
     image: $IMAGE
@@ -125,6 +131,7 @@ controller:
     - /dev:/host/dev
     - /lib/modules:/lib/modules:ro
     labels:
+        io.rancher.container.system: Longhorn
         io.rancher.sidekicks: controller-agent
         io.rancher.container.hostname_override: container_name
         io.rancher.scheduler.affinity:container: $DRIVER_CONTAINER
@@ -150,3 +157,5 @@ controller-agent:
     command:
     - longhorn-agent
     - --controller
+    labels:
+        io.rancher.container.system: Longhorn
